--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -113,10 +113,16 @@ body {
 
         #shopping-cart {
             cursor: pointer;
+            background-image: url('../img/icon-carrinho.png');
+            background-size: cover;
+            background-position: center;
+            width: 20px;
+            height: 23px;
 
-            img {
-                height: 100%;
-                width: 100%;
+            #cart-quantity {
+                padding: 10px 2px 2px 11px;
+                color: #fff;
+                font-size: 12px;
             }
         }
     }
