--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -657,6 +657,7 @@ body {
 
     footer {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -664,7 +665,16 @@ body {
         text-transform: uppercase;
         color: #fff;
         width: 100%;
-        height: 33px;
+        // height: 33px;
         margin-top: 40px;
+
+        h3 {
+            margin: 5px 0 5px 0;
+
+            a{
+                color: $primary-color;
+                text-decoration: none;
+            }
+        }
     }
 }
